新增场景要素，词类下拉框隐去父类字样

--- a/WebRoot/rule/scenariosCall.html
+++ b/WebRoot/rule/scenariosCall.html
@@ -562,7 +562,7 @@
 					<td><input id="sceneElementEditForm-weight" name="sceneElementEditForm-weight" style="width: 300px;"></input></td>
 				</tr>
 				<tr>
-					<td>对应词类:</td>
+					<td>选择已有要素:</td>
 					<td>
 						<input class="easyui-combobox" id="sceneElementEditForm-wordClass" name="sceneElementEditForm-wordClass" style="width: 270px;"></input>
 						<a id="addWordClass" name="addWordClass" href="javascript:void(0)" class="easyui-linkbutton" 
