--- a/WebRoot/rule/scenariosCall.html
+++ b/WebRoot/rule/scenariosCall.html
@@ -613,9 +613,18 @@
 	</div>
 	<!-- 场景要素新增和编辑 window end -->
 	
-	<!-- 词类新增和编辑 window start -->
-	<div id="wordClassEditDiv" class="easyui-window" title="词类新增" data-options="modal:true,closed:true,iconCls:'icon-save'" style="width:900px;height:500px;">
-		<iframe id='standardIframe' scrolling="auto" width='100%' height='100%' frameborder='0' src='http://localhost:8082/KM/wordclass/app.html'></iframe>
+	<!-- 场景要素值新增和编辑 window start -->
+	<div id="wordClassEditDiv" class="easyui-window" title="场景要素值新增" data-options="modal:true,closed:true,iconCls:'icon-save'" style="width:900px;height:500px;">
+		<table>
+			<tr>
+				<td>
+					<table id="elementValueTable" class="easyui-datagrid" style="width:450px;height:300px;"></table>
+				</td>
+				<td>
+					<table id="elementAliasTable" class="easyui-datagrid" style="width:450px;height:300px;"></table>
+				</td>
+			</tr>
+		</table>
 	</div>
 		
 	<!-- 添加用户答案 -->
