--- a/WebRoot/rule/scenariosCall.html
+++ b/WebRoot/rule/scenariosCall.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 <title>scenariosCallOut.html</title>
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="../easyui/jquery-easyui-1.4.1/jquery.easyui.min.js"></script>
 <script type="text/javascript" src="../easyui/jquery-easyui-1.4.1/plugins/jquery.radiobutton.js"></script>
 <script type="text/javascript" src="../easyui/jquery-easyui-1.4.1/locale/easyui-lang-zh_CN.js"></script>
+<script type="text/javascript" src="../easyui/datagrid-cellediting.js"></script>
 <script type="text/javascript" src="../gojs/go.js"></script>
 <script type="text/javascript" src="../umeditor1_2_2-utf8-jsp/umeditor.config.js"></script>
 <script type="text/javascript" src="../umeditor1_2_2-utf8-jsp/umeditor.min.js"></script>
