解决山东联通问题： 1、放音组件跳转无需等待用户回答 2、信息收集组件增加用户回答采集 3、信息收集参数发送至业务系统

--- a/WebRoot/rule/scenariosCall.html
+++ b/WebRoot/rule/scenariosCall.html
@@ -121,7 +121,7 @@
 					<tr>
 						<td>
 							<span>录音文件：</span>
-							<span><input id="code" class="easyui-textbox" multiline="true" style="width: 240px;height: 100px"/></span>
+							<span><input id="code" name="code" class="easyui-textbox" multiline="true" style="width: 240px;height: 100px"/></span>
 						</td>
 					</tr>
 				</table>
